fix gap between index email form and footer

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@
 border-radius: 6px 6px 0px 0px;
 display: block;
 max-width: 692px;
-margin: 0 auto;
+margin: 0 auto -2px auto;
 text-align: center;
 }
 
